--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,12 @@
         <div class="container-grid d-flex justify-content-center">
         </div>
         <div class="card port-cards" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/Wildwood.jpg" alt="Project 1">
+            <div class="card-body">
+                <p class="card-text"><a href="https://carnesgit.github.io/LocalHotSpot/">First Group Project designed to be a companion for visiting Wildwood, NJ</a></p>
+            </div>
+        </div>
+        <div class="card port-cards" style="width: 18rem;">
             <img class="card-img-top" src="assets/images/Train Scheduler.jpg" alt="Train Scheduler">
             <div class="card-body">
                 <p class="card-text"><a href="https://louis15187.github.io/Train-Schedule/">A Train Scheduler using Jquery and Firebase.</a></p>
