more details added

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             <div class="card port-cards" style="width: 18rem;">
                 <img class="card-img-top" src="assets/images/Friend finder.jpg" alt="Friend Finder">
                 <div class="card-body">
-                    <p class="card-text"><a href="https://louis15187.github.io/Friend-Finder/">Friend Finder</a></p>
+                    <p class="card-text"><a href="https://friendfinderlpm.herokuapp.com">Friend Finder deployed on Heroku</a></p>
                 </div>
                 <div class="card port-cards" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/Bamazon.jpg" alt="Bamazon">
