--- a/portfolio.html
+++ b/portfolio.html
@@ -35,72 +35,77 @@
         <div class="container-grid d-flex justify-content-center">
         </div>
         <div class="card port-cards" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/Burger.jpg" alt="Burger">
+            <img class="card-img-top" src="assets/images/background.PNG" alt="Project 2">
             <div class="card-body">
-                <p class="card-text"><a href="https://burgerlpm.herokuapp.com">Burger App deployed on Heroku</a></p>
+                <p class="card-text"><a href="https://morning-peak-52158.herokuapp.com">First Group Project designed to be a companion for visiting Wildwood, NJ</a></p>
             </div>
             <div class="card port-cards" style="width: 18rem;">
-                <img class="card-img-top" src="assets/images/Friend finder.jpg" alt="Friend Finder">
+                <img class="card-img-top" src="assets/images/Burger.jpg" alt="Burger">
                 <div class="card-body">
-                    <p class="card-text"><a href="https://friendfinderlpm.herokuapp.com">Friend Finder deployed on Heroku</a></p>
+                    <p class="card-text"><a href="https://burgerlpm.herokuapp.com">Burger App deployed on Heroku</a></p>
                 </div>
                 <div class="card port-cards" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/Bamazon.jpg" alt="Bamazon">
+                    <img class="card-img-top" src="assets/images/Friend finder.jpg" alt="Friend Finder">
                     <div class="card-body">
-                        <p class="card-text"><a href="https://louis15187.github.io/Bamazon/">Bamazon</a></p>
+                        <p class="card-text"><a href="https://friendfinderlpm.herokuapp.com">Friend Finder deployed on Heroku</a></p>
                     </div>
                     <div class="card port-cards" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/LIRI.jpg" alt="LIRI">
+                        <img class="card-img-top" src="assets/images/Bamazon.jpg" alt="Bamazon">
                         <div class="card-body">
-                            <p class="card-text"><a href="https://louis15187.github.io/LIRI-Bot/">LIRI is a Language Interpretation and Recognition Interface capable of Spotify, BandsInTown, and OMDB for enterntaiment</a></p>
+                            <p class="card-text"><a href="https://louis15187.github.io/Bamazon/">Bamazon</a></p>
                         </div>
+                        <div class="card port-cards" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/images/LIRI.jpg" alt="LIRI">
+                            <div class="card-body">
+                                <p class="card-text"><a href="https://louis15187.github.io/LIRI-Bot/">LIRI is a Language Interpretation and Recognition Interface capable of Spotify, BandsInTown, and OMDB for enterntaiment</a></p>
+                            </div>
 
-                        <div class="card port-cards" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/Wildwood.jpg" alt="Project 1">
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://carnesgit.github.io/LocalHotSpot/">First Group Project designed to be a companion for visiting Wildwood, NJ</a></p>
+                            <div class="card port-cards" style="width: 18rem;">
+                                <img class="card-img-top" src="assets/images/Wildwood.jpg" alt="Project 1">
+                                <div class="card-body">
+                                    <p class="card-text"><a href="https://carnesgit.github.io/LocalHotSpot/">First Group Project designed to be a companion for visiting Wildwood, NJ</a></p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card port-cards" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/Train Scheduler.jpg" alt="Train Scheduler">
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://louis15187.github.io/Train-Schedule/">A Train Scheduler using Jquery and Firebase.</a></p>
+                            <div class="card port-cards" style="width: 18rem;">
+                                <img class="card-img-top" src="assets/images/Train Scheduler.jpg" alt="Train Scheduler">
+                                <div class="card-body">
+                                    <p class="card-text"><a href="https://louis15187.github.io/Train-Schedule/">A Train Scheduler using Jquery and Firebase.</a></p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card port-cards" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/Baseball.jpg" alt="Gifs">
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://louis15187.github.io/GifTastic/">GifTastic: Dynamic page of popular baseball players using the Giphy API.</a></p>
+                            <div class="card port-cards" style="width: 18rem;">
+                                <img class="card-img-top" src="assets/images/Baseball.jpg" alt="Gifs">
+                                <div class="card-body">
+                                    <p class="card-text"><a href="https://louis15187.github.io/GifTastic/">GifTastic: Dynamic page of popular baseball players using the Giphy API.</a></p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card port-cards" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/NHL Trivia.jpg" alt="NHL Trivia">
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://louis15187.github.io/Trivia-Game/">NHL Trivia Game using Javascipt and Timeout methods.</a></p>
+                            <div class="card port-cards" style="width: 18rem;">
+                                <img class="card-img-top" src="assets/images/NHL Trivia.jpg" alt="NHL Trivia">
+                                <div class="card-body">
+                                    <p class="card-text"><a href="https://louis15187.github.io/Trivia-Game/">NHL Trivia Game using Javascipt and Timeout methods.</a></p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card port-cards" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/Crystal Collector.jpg" alt="Crystal Collector Game">
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://louis15187.github.io/HW4-unit-4-game/">Crystal Collector that uses Javascript logic.</a></p>
+                            <div class="card port-cards" style="width: 18rem;">
+                                <img class="card-img-top" src="assets/images/Crystal Collector.jpg" alt="Crystal Collector Game">
+                                <div class="card-body">
+                                    <p class="card-text"><a href="https://louis15187.github.io/HW4-unit-4-game/">Crystal Collector that uses Javascript logic.</a></p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card port-cards" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/Letter Guessing Game.png" alt="Letter Guessing Game">
-                            <div class="card-body">
-                                <p class="card-text"><a href="https://louis15187.github.io/HW3-PSYCHIC-GAME/">Letter Guessing Game.</a></p>
+                            <div class="card port-cards" style="width: 18rem;">
+                                <img class="card-img-top" src="assets/images/Letter Guessing Game.png" alt="Letter Guessing Game">
+                                <div class="card-body">
+                                    <p class="card-text"><a href="https://louis15187.github.io/HW3-PSYCHIC-GAME/">Letter Guessing Game.</a></p>
+                                </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="card fixed-bottom mt-5">
-                <div class="card-header text-center">
-                    Copyright 2019
+                <div class="card fixed-bottom mt-5">
+                    <div class="card-header text-center">
+                        Copyright 2019
+                    </div>
                 </div>
-            </div>
 </body>
 
 </html>
