Language for Project 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         <div class="card port-cards" style="width: 18rem;">
             <img class="card-img-top" src="assets/images/background.PNG" alt="Project 2">
             <div class="card-body">
-                <p class="card-text"><a href="https://morning-peak-52158.herokuapp.com">First Group Project designed to be a companion for visiting Wildwood, NJ</a></p>
+                <p class="card-text"><a href="https://morning-peak-52158.herokuapp.com">Second Group Project designed a music lovers application</a></p>
             </div>
             <div class="card port-cards" style="width: 18rem;">
                 <img class="card-img-top" src="assets/images/Burger.jpg" alt="Burger">
